syntax = "proto3";

package com.sushkevych.securitydevices.input.request.device.create.proto;

option java_multiple_files = true;

import "com/sushkevych/securitydevices/commonmodels/device/device.proto";

message CreateDeviceRequest {
  commonmodels.device.DeviceRequest request = 1;
}

message CreateDeviceResponse {
  commonmodels.device.DeviceResponse response = 1;
}
